# csci-5607

./: .gitignore  README.md
hw0/: README.md
hw0/output/: output2.ppm  output3.ppm  simplyppm.ppm
hw0/src/: Makefile  simpleppm.cpp
hw1/: README.md
hw1/input/: input_file.txt
hw1/output/: 1.ppm  2.ppm  5.ppm
hw1/src/: Makefile  hw1a_sample1.txt  hw1a_sample1_cylinder.txt  ray.cpp  ray.h  ray_casting.cpp  raytracer  raytracer.cpp  raytracer.ppm  types.h  utils.cpp  utils.h
hw1a/output/: 4.ppm  6.ppm
hw1a/src/: Makefile  raytracer  raytracer.cpp
hw1b/: README.md
hw1b/input/hw1b/: ray_input1b.txt  (+9 more)
hw1b/output/: ray_input1b.txt_raytracer.ppm  ray_input2b.txt_raytracer.ppm  ray_input3b.txt_raytracer.ppm  ray_input5b.txt_raytracer.ppm
hw1b/showcase/: showcase.ppm
hw1b/src/: Makefile  ray.cpp  ray.h  ray_input.txt_raytracer.ppm  ray_input1b.txt_raytracer.ppm  ray_input4b.txt  ray_input4b.txt_raytracer.ppm  ray_input5b.txt  raytracer  raytracer.cpp  scene.cpp  showcase.txt  types.h  utils.cpp  utils.h
hw1c/: README.md
hw1c/output/: cube_smooth.txt.ppm  cube_textured.ppm  multiple_triangles_textured.ppm  single_triangle_flat.ppm
hw1c/src/: Makefile  bump.h  color.cpp  concatenate_img.py  cylinder.cpp  cylinder.h  material_color.h  partialcube.txt_raytracer.ppm  ray.cpp  ray.h  ray_input1b.txt  ray_input1b.txt_raytracer.ppm  ray_input2b.txt_raytracer.ppm  ray_input3b.txt  ray_input3b.txt_raytracer.ppm  ray_input4b.txt_raytracer.ppm  raytracer  raytracer.cpp  scene.cpp  scene.h  single_triangle_flat.txt  single_triangle_flat.txt_raytracer.ppm  sphere.cpp  sphere.h  texture.cpp  texture.h  textured_sphere.txt_raytracer.ppm  triangle.h  types.h  utils.cpp  utils.h
hw1d/: README.md
hw1d/src/: Makefile  bump.cpp  color.h  material_color.cpp  material_color.h  raytracer  raytracer.cpp  scene.cpp  texture.h  triangle.cpp  triangle.h  types.h  utils.cpp  utils.h  world.ppm  world_normal.ppm
hw2a/: CMakeLists.txt  README.md
hw2a/assets/: demo.mov  demo2.mov
hw2a/src/: HW2a.cpp  ShaderStuff.hpp  fshader2a.glsl  scene1.txt  scene2.txt  vshader2a.glsl
hw2b/: CMakeLists.txt  README.md
hw2b/assets/: demo.mov
hw2b/src/: main.cpp  shader.frag  shader.vert  trimesh.hpp
(+74 files in other folders)
